# ticket-triage-assistant

./: .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: config-example.md  implementation-notes.md  roadmap.md  testing-guide.md  usage-examples.md
docs/daily-progress/: 2026-06-18.md  2026-06-22.md
src/ticket_triage/: __init__.py  cli.py  triage.py
tests/: test_triage.py
