[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-triage-assistant"
version = "0.1.0"
description = "CLI tool for classifying and triaging IT support tickets"
authors = [{ name = "Ali Bidhendi", email = "alibidhendi2000@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ticket-triage = "ticket_triage.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
